objects/AcctSeed__Expense_Report__c.object
<CustomObject>
    <description>Used to document expenses incurred by an employee.</description>
    <fields>
        <fullName>AcctSeed__Billable_Expenses__c</fullName>
        <inlineHelpText>The total amount of expenses which can be billed.</inlineHelpText>
        <label>Billable Expenses</label>
        <summarizedField>AcctSeed__Expense_Line__c.AcctSeed__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Expense_Line__c.AcctSeed__Billable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Expense_Line__c.AcctSeed__Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billed_Expenses__c</fullName>
        <inlineHelpText>The total amount of expenses which have been billed.</inlineHelpText>
        <label>Billed Expenses</label>
        <summarizedField>AcctSeed__Expense_Line__c.AcctSeed__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Expense_Line__c.AcctSeed__Billed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Expense_Line__c.AcctSeed__Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of the employee that is submitting the expense report.</inlineHelpText>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Denotes the associated ledger.</inlineHelpText>
        <label>Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Expense Reports</relationshipLabel>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Line_Count__c</fullName>
        <inlineHelpText>Number of expense lines associated with this record.</inlineHelpText>
        <label>Line Count</label>
        <summaryForeignKey>AcctSeed__Expense_Line__c.AcctSeed__Expense_Report__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Paid_Expenses__c</fullName>
        <inlineHelpText>The total amount of expenses which have been paid to either an employee or credit card vendor.</inlineHelpText>
        <label>Paid Expenses</label>
        <summarizedField>AcctSeed__Expense_Line__c.AcctSeed__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Expense_Line__c.AcctSeed__Vendor_Employee_Paid__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Expense_Line__c.AcctSeed__Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Payable_Expenses__c</fullName>
        <inlineHelpText>The total amount of expenses which are employee reimbursable or credit card vendor payable.</inlineHelpText>
        <label>Payable Expenses</label>
        <summarizedField>AcctSeed__Expense_Line__c.AcctSeed__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Expense_Line__c.AcctSeed__Vendor_Employee_Payable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Expense_Line__c.AcctSeed__Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <inlineHelpText>Status of the expense report controlled by the approval process.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                    <default>true</default>
                    <label>In Process</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Total_Expenses__c</fullName>
        <inlineHelpText>The sum of all the expense lines related to the expense report.</inlineHelpText>
        <label>Total Expenses</label>
        <summarizedField>AcctSeed__Expense_Line__c.AcctSeed__Amount__c</summarizedField>
        <summaryForeignKey>AcctSeed__Expense_Line__c.AcctSeed__Expense_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Unbilled_Expenses__c</fullName>
        <formula>AcctSeed__Billable_Expenses__c - AcctSeed__Billed_Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total amount of expenses which have not been billed.</inlineHelpText>
        <label>Unbilled Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Unpaid_Expenses__c</fullName>
        <formula>AcctSeed__Payable_Expenses__c - AcctSeed__Paid_Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total amount of expenses which have not been paid.</inlineHelpText>
        <label>Unpaid Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <description>used with lookup helper to populate the branch</description>
        <formula>TEXT(AcctSeed__Employee__r.Branch__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch-OLD-</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagerID__c</fullName>
        <formula>AcctSeed__Employee__r.ManagerSFID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_for_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Manager of the employee that is submitting the expense report.</inlineHelpText>
        <label>Manager for Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ops_Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <infoMessage>Must be of Type &quot;GL Account Variable 3&quot;.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Expense Reports (Ops Division)</relationshipLabel>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReportBranch__c</fullName>
        <inlineHelpText>Expense Report Branch. This is automatically set based on the user profile.</inlineHelpText>
        <label>Branch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Mid Atlantic</fullName>
                </value>
                <value>
                    <fullName>New England</fullName>
                </value>
                <value>
                    <fullName>Nor Cal</fullName>
                </value>
                <value>
                    <fullName>So Cal</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <infoMessage>Must be of Type &quot;GL Account Variable 2&quot;.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Expense Reports (Sales Segment)</relationshipLabel>
        <relationshipName>Expense_Reports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Expense Report</label>
    <listViews>
        <fullName>AcctSeed__Unbilled_Expense_Reports</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Employee__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Billable_Expenses__c</columns>
        <columns>AcctSeed__Billed_Expenses__c</columns>
        <columns>AcctSeed__Unbilled_Expenses__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Unbilled_Expenses__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Unbilled Expense Reports</label>
        <language>en_US</language>
        <sharedTo>
            <group>Accounting</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Unpaid_Expense_Reports</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Employee__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Payable_Expenses__c</columns>
        <columns>AcctSeed__Unpaid_Expenses__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Unpaid_Expenses__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Unpaid Expense Reports</label>
        <language>en_US</language>
        <sharedTo>
            <group>Accounting</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Current_Year_Expense_Reports</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>AcctSeed__Employee__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Total_Expenses__c</columns>
        <columns>AcctSeed__Paid_Expenses__c</columns>
        <columns>Manager_for_Approval__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>My Current Months Expense Reports</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Expense_Reports</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Total_Expenses__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>In Process,Pending Approval</value>
        </filters>
        <label>My Open Expense Reports</label>
        <sharedTo>
            <group>Internal</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Expense Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Employee_Is_Required</fullName>
        <active>true</active>
        <description>The employee field is required</description>
        <errorConditionFormula>ISBLANK(AcctSeed__Employee__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Employee__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Branch_OpsDiv_SalesSeg</fullName>
        <active>false</active>
        <description>Only certain users in Accounting</description>
        <errorConditionFormula>AND(
AND(
$User.ProfileId &lt;&gt; &quot;00e800000018oPc&quot;,
$User.Id &lt;&gt; &quot;00580000005JBok&quot;,
$User.Id &lt;&gt; &quot;00534000009rrG4&quot;,
$User.Id &lt;&gt; &quot;00534000008xZ72&quot;,
$User.Id &lt;&gt; &quot;00580000005LfBw&quot;,
$User.Id &lt;&gt; &quot;005800000076grS&quot;,
$User.Id &lt;&gt; &quot;005340000077Q4s&quot;,
$User.Id &lt;&gt; &quot;005300000013ty7&quot;,
$User.Id &lt;&gt; &quot;00580000003wolt&quot;,
$User.Id &lt;&gt; &quot;00580000005JjIv&quot;,
$User.Id &lt;&gt; &quot;00530000000sGAF&quot;,

$User.Id &lt;&gt; &quot;005800000074KAY&quot;,
$User.Id &lt;&gt; &quot;00580000003AOIC&quot; ),
OR( 
ISCHANGED ( ReportBranch__c ),
ISCHANGED ( Ops_Division__c ),
ISCHANGED ( Sales_Segment__c ) ) )</errorConditionFormula>
        <errorMessage>You cannot change the Branch, Ops Division or Sales Segment</errorMessage>
    </validationRules>
</CustomObject>